--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,18 @@ flask-cors = "^4.0.1"
 dvc = "^3.51.1"
 dvc-s3 = "^3.2.0"
 dagshub = "^0.3.27"
+pytest = "^8.2.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-fetch_weather_data = "src.data.scripts.fetch_weather_data:main"
 fetch_marine_data = "src.data.scripts.fetch_marine_data:main"
-process_weather_data = "src.data.scripts.process_weather_data:main"
-process_marine_data = "src.data.scripts.process_marine_data:main"
+preprocess_marine_data = "src.data.scripts.preprocess_marine_data:main"
+
+fetch_weather_data = "src.data.scripts.fetch_weather_data:main"
+preprocess_weather_data = "src.data.scripts.preprocess_weather_data:main"
+
 merge_data = "src.data.scripts.merge_data:main"
 split_data = "src.data.scripts.split_data:main"
