--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,13 @@ dvc = "^3.51.1"
 dvc-s3 = "^3.2.0"
 dagshub = "^0.3.27"
 pytest = "^8.2.1"
+evidently = "^0.4.25"
+great-expectations = "^0.18.15"
+mlflow = "^2.13.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -34,3 +41,4 @@ preprocess_weather_data = "src.data.scripts.preprocess_weather_data:main"
 
 merge_data = "src.data.scripts.merge_data:main"
 split_data = "src.data.scripts.split_data:main"
+validate_data = "gx.run_my_checkpoint:main"
