--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -193,7 +193,7 @@ jobs:
 
       - name: Run data validation
         run: |
-          poetry run validate
+          poetry run validate_data
 
       - name: Deploy DataDocs to Netlify
         uses: nwtgck/actions-netlify@v1.2
