--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,5 @@ preprocess_weather_data = "src.data.scripts.preprocess_weather_data:main"
 merge_data = "src.data.scripts.merge_data:main"
 split_data = "src.data.scripts.split_data:main"
 validate_data = "gx.run_my_checkpoint:main"
+test_data = "src.validation.test_data:main"
+data_drift = "src.validation.data_drift:main"
