--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ src/__pycache__
 tests/__pycache__
 src/data/__pycache__
 src/validation/__pycache__
+src/visualization/__pycache__
 src/data/scripts/__pycache__
+src/models/__pycache__
+src/models/scripts/__pycache__
+
+
 
 src/client/node_modules
 src/client/.vscode
