--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-.pytest_cache
-src/__pycache__
-tests/__pycache__
-src/data/__pycache__
-src/validation/__pycache__
-src/visualization/__pycache__
-src/data/scripts/__pycache__
-src/models/__pycache__
-src/models/scripts/__pycache__
-
-
+__pycache__/
 
 src/client/node_modules
 src/client/.vscode
