--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,3 +58,4 @@ data_drift = "src.validation.data_drift:main"
 
 train_model = "src.models.scripts.train_model:main"
 validate_predictions = "src.models.scripts.validate_predictions:main"
+test_pred = "src.models.test_predictions:main"
