--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -287,7 +287,7 @@ jobs:
       - name: Deploy data test results to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: 'reports/sites'
+          publish-dir: 'reports/sites/stability_tests.html'
           production-deploy: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
